[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
reqwest = "0.12.18"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "uuid",
] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
axum-test = "17.3.0"
tokio = { version = "1.37.0", features = ["macros"] }
regex = "1.10.6"
